[package]
name = "runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = [ "unstable" ] }
clap = "2.33.3"
env_logger = "0.9.0"
futures = "0.3.15"
log = "0.4.14"
rand = "0.8.4"
